initial html layout done

--- a/index.html
+++ b/index.html
@@ -11,6 +11,48 @@
     <script src="assets/javascript/game.js"></script>
 </head>
 <body>
-    
+    <div class="container">
+
+        <div class="row">
+            <div id="head" class="col-md-6">
+                <h1>Crystals Collector</h1>
+            </div>
+        </div>
+
+        <div class="row">
+                <div id="instructions" class="col-md-6">
+                    <p>Instructions</p>
+                    <p>p1</p>
+                    <p>p2</p>
+                    <p>p3</p>
+                    <p>p4</p>
+                </div>
+            </div>
+
+            <div class="row">
+                <div id="scoreBox" class="col-md-3">
+                    <h2>Score: 39</h2>
+                </div>
+                <div id="winsLosses" class="col-md-5">
+                    <p id="wins">Wins: </p>
+                    <p id="loss">Losses:</p>
+                </div>
+            </div>
+
+            <div id="button" class="row">
+                <button id="crystal1" class="button"> far left</button>
+                <button id="crystal2" class="button">left</button>
+                <button id="crystal3" class="button">right</button>
+                <button id="crystal4" class="button">far right</button>
+            </div>
+
+            <div id="scoreBoard" class="row">
+                <div id="totalScore" class="col-md-4">
+                    <h6 id="score">Your total score:</h6>
+                    <h1 id="scoreBox">0</h1>
+                </div>
+            </div>
+            
+    </div>
 </body>
 </html>
