--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <script src="assets/javascript/game.js"></script>
 </head>
-<body>
-    <div class="container">
+<body id="body">
+    <div id="masterContainer" class="container">
 
         <div class="row">
             <div id="head" class="col-md-6">
-                <h1>Crystals Collector</h1>
+                <h1 id="h1">Crystals Collector</h1>
             </div>
         </div>
 
