--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" type="text/css" media="screen" href="assets/reset/reset.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="assets/css/style.css" />
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <script src="assets/javascript/game.js"></script>
+    
 </head>
 <body id="body">
     <div id="masterContainer" class="container">
@@ -21,11 +21,13 @@
 
         <div class="row">
                 <div id="instructions" class="col-md-6">
-                    <p>Instructions</p>
-                    <p>p1</p>
-                    <p>p2</p>
-                    <p>p3</p>
-                    <p>p4</p>
+                    <h5>Instructions:</h5>
+                    <p>You will be given a random number at the start of the game.</p>
+                    <p>There are four crystals at the bottom of the page. When a crystal is clicked, a specific amount will be added to your total score.</p>
+                    <p>To win the game, you must get your score to match the random number. If your total score goes higher than the random number, you lose.</p>
+                    <p>The value of each crystal is hidden from you until you click on it.</p>
+                    <p>Each time the game starts, each crystal will get a new value.</p>
+                    <p>Good luck!</p>
                 </div>
             </div>
 
@@ -55,4 +57,6 @@
             
     </div>
 </body>
+<script src="https://code.jquery.com/jquery.js"></script>
+<script src="assets/javascript/game.js"></script>
 </html>
