added some styling to the buttons, still working though

--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
             </div>
 
             <div id="button" class="row">
-                <button id="crystal1" class="button"> far left</button>
-                <button id="crystal2" class="button">left</button>
-                <button id="crystal3" class="button">right</button>
-                <button id="crystal4" class="button">far right</button>
+                <button id="redCrystal" class="button">red</button>
+                <button id="blueCrystal" class="button">blue</button>
+                <button id="purpleCrystal" class="button">purple</button>
+                <button id="greenCrystal" class="button">green</button>
             </div>
 
             <div id="scoreBoard" class="row">
